--- a/EnLitenUtmaning.html
+++ b/EnLitenUtmaning.html
@@ -3,7 +3,7 @@
 
 <body>
 
-<h2 id= "headline" style = "color:blue;" style="font-size:60px;">Singla Slant!<h2> 
+<h2 id= "headline" style = "color:rgb(0, 255, 170);" style="font-size:60px;">Singla Slant!<h2> 
 
 <p>Antal krona</p>
 
