Detta är en test från stationär dator

--- a/EnLitenUtmaning.html
+++ b/EnLitenUtmaning.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+//Test från stationär dator
 <body>
 
-<h2 id= "headline" style = "color:rgb(0, 255, 170);" style="font-size:60px;">Singla Slant!<h2> 
+<h2 id= "headline" style = "color:rgb(0, 255, 170);" style="font-size:60px;">Singla Slant!<h2>
 
 <p>Antal krona</p>
 
